--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ idna==3.10
 packaging==25.0
 pillow==11.2.1
 pytesseract==0.3.13
+numpy==2.3.0
+opencv-python-headless==4.11.0.86
 requests==2.32.4
 urllib3==2.4.0
